Wrap details table in panel to avoid background leaking (RPB-310)
And remove bottom margin under details table

--- a/public/stylesheets/rpb.css
+++ b/public/stylesheets/rpb.css
@@ -11,6 +11,10 @@ dd {
 	padding-bottom: 0.5em;
 }
 
+.row div dl {
+	margin-bottom: 0px;
+}
+
 #rpb-form {
 	padding-bottom: 1em;
 }
